--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
-body
-     backgroun-color #F5DEB3;
-    text-align: 30px;
+body {
+	background: #CCCCCC
 }
 
-h1{
-     font-size: 30px;
-     color:blue;
+#banner {
+	width: 100%;
 }
 
-p{   
-     color:blue;
-     font-size: 25px;
+h1 {
+	text-align: center
 }
 
+p {
+	text-align: center;
+}
+
+#missao {
+	font-size: 20px
+}
+
+em strong {
+	color: #FF0000;
+}
