--- a/style.css
+++ b/style.css
@@ -21,3 +21,13 @@ p {
 em strong {
 	color: #FF0000;
 }
+
+.itens{
+	font-style: italic;
+
+}
+
+.benedicios{
+	background-color:aqua
+	text-align:black left;
+}
