--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
 	background: #CCCCCC
 }
@@ -30,4 +31,13 @@ em strong {
 .benedicios{
 	background-color:aqua
 	text-align:black left;
+}
+
+ul{
+	display: inline-block;
+	vertical-align: top;
+	margin; 3%;
+	list-style: circle;
+	width:20%;
+	margin: right 15%;
 }
